인트로삽입

--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
 </head>
 <body>
     <header class="header">
+        <div class="hd-intro">
+            <div class="hd-bg"></div>
+            <ul class="intro-list">
+                <li class="intro-item bg1"></li>
+                <li class="intro-item bg2"></li>
+                <li class="intro-item bg3">
+                    <div class="text-box">
+                        <span>준비된</span>
+                        <span>UI</span>
+                        <span>개발자</span>
+                    </div>
+                </li>
+            </ul>
+        </div>
         <div class="hd-introduction">
             <div class="intro-top">
                 <div class="intro-name">
