포로젝트슬라이드사진추가

--- a/index.html
+++ b/index.html
@@ -150,62 +150,122 @@
                             <ul class="swiper-wrapper">
                                 <li class="swiper-slide">
                                     <div class="project-area">
-                                        <div class="img-wrap">
-                                            <img src="./assets/images/pro1.png" alt="네이버프로젝트">
-                                        </div>
-                                        <div class="text-wrap">
-                                            <span class="pro-title">NAVER</span>
-                                        </div>
+                                        <a href="https://euni0224.github.io/naver/" target='_blank'>
+                                            <div class="img-wrap">
+                                                <img src="./assets/images/naver.jpg" alt="네이버프로젝트">
+                                            </div>
+                                            <div class="text-wrap">
+                                                <span class="pro-title">NAVER</span>
+                                            </div>
+                                        </a>
                                     </div>
                                 </li>
                                 <li class="swiper-slide">
                                     <div class="project-area">
-                                        <div class="img-wrap">
-                                            <img src="./assets/images/pro1.png" alt="네이버프로젝트">
-                                        </div>
-                                        <div class="text-wrap">
-                                            <span class="pro-title">NAVER</span>
-                                        </div>
+                                        <a href="https://euni0224.github.io/gglag/" target='_blank'>
+                                            <div class="img-wrap">
+                                                <img src="./assets/images/gglag.jpg" alt="네이버프로젝트">
+                                            </div>
+                                            <div class="text-wrap">
+                                                <span class="pro-title">G.G LAG</span>
+                                            </div>
+                                        </a>
                                     </div>
                                 </li>
                                 <li class="swiper-slide">
                                     <div class="project-area">
-                                        <div class="img-wrap">
-                                            <img src="./assets/images/pro1.png" alt="네이버프로젝트">
-                                        </div>
-                                        <div class="text-wrap">
-                                            <span class="pro-title">NAVER</span>
-                                        </div>
+                                        <a href="https://euni0224.github.io/seoul/" target='_blank'>
+                                            <div class="img-wrap">
+                                                <img src="./assets/images/seoul.jpg" alt="네이버프로젝트">
+                                            </div>
+                                            <div class="text-wrap">
+                                                <span class="pro-title">서울시청</span>
+                                            </div>
+                                        </a>
                                     </div>
                                 </li>
                                 <li class="swiper-slide">
                                     <div class="project-area">
-                                        <div class="img-wrap">
-                                            <img src="./assets/images/pro1.png" alt="네이버프로젝트">
-                                        </div>
-                                        <div class="text-wrap">
-                                            <span class="pro-title">NAVER</span>
-                                        </div>
+                                        <a href="https://euni0224.github.io/andar/" target='_blank'>
+                                            <div class="img-wrap">
+                                                <img src="./assets/images/andar.jpg" alt="네이버프로젝트">
+                                            </div>
+                                            <div class="text-wrap">
+                                                <span class="pro-title">안다르</span>
+                                            </div>
+                                        </a>
                                     </div>
                                 </li>
                                 <li class="swiper-slide">
                                     <div class="project-area">
-                                        <div class="img-wrap">
-                                            <img src="./assets/images/pro1.png" alt="네이버프로젝트">
-                                        </div>
-                                        <div class="text-wrap">
-                                            <span class="pro-title">NAVER</span>
-                                        </div>
+                                        <a href="https://euni0224.github.io/navercareers/" target='_blank'>
+                                            <div class="img-wrap">
+                                                <img src="./assets/images/careers.jpg" alt="네이버프로젝트">
+                                            </div>
+                                            <div class="text-wrap">
+                                                <span class="pro-title">NAVER Careers</span>
+                                            </div>
+                                        </a>
                                     </div>
                                 </li>
                                 <li class="swiper-slide">
                                     <div class="project-area">
-                                        <div class="img-wrap">
-                                            <img src="./assets/images/pro1.png" alt="네이버프로젝트">
-                                        </div>
-                                        <div class="text-wrap">
-                                            <span class="pro-title">NAVER</span>
-                                        </div>
+                                        <a href="https://euni0224.github.io/nike/" target='_blank'>
+                                            <div class="img-wrap">
+                                                <img src="./assets/images/nike.jpg" alt="네이버프로젝트">
+                                            </div>
+                                            <div class="text-wrap">
+                                                <span class="pro-title">나이키</span>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="swiper-slide">
+                                    <div class="project-area">
+                                        <a href="https://euni0224.github.io/millie/" target='_blank'>
+                                            <div class="img-wrap">
+                                                <img src="./assets/images/millie.jpg" alt="네이버프로젝트">
+                                            </div>
+                                            <div class="text-wrap">
+                                                <span class="pro-title">밀리의서재</span>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="swiper-slide">
+                                    <div class="project-area">
+                                        <a href="https://euni0224.github.io/RHE/" target='_blank'>
+                                            <div class="img-wrap">
+                                                <img src="./assets/images/RHE.jpg" alt="네이버프로젝트">
+                                            </div>
+                                            <div class="text-wrap">
+                                                <span class="pro-title">RHE</span>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="swiper-slide">
+                                    <div class="project-area">
+                                        <a href="https://euni0224.github.io/PILL/" target='_blank'>
+                                            <div class="img-wrap">
+                                                <img src="./assets/images/pill.jpg" alt="네이버프로젝트">
+                                            </div>
+                                            <div class="text-wrap">
+                                                <span class="pro-title">PILL</span>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="swiper-slide">
+                                    <div class="project-area">
+                                        <a href="https://euni0224.github.io/camera/" target='_blank'>
+                                            <div class="img-wrap">
+                                                <img src="./assets/images/camrea.jpg" alt="네이버프로젝트">
+                                            </div>
+                                            <div class="text-wrap">
+                                                <span class="pro-title">camera</span>
+                                            </div>
+                                        </a>
                                     </div>
                                 </li>
                             </ul>
