--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
             </div>
             <address class="group-addr">
                 <div class="addr-email"><a href="mailto:gong49677@kakao.com"><img src="./assets/images/email.png" alt=""></a></div>
-                <div class="addr-velog"><a href="https://velog.io/@gong496777" class="velog"><img src="./assets/images/velog.png" alt=""></a></div>
-                <div class="addr-git"><a href="https://github.com/euni0224/" class="github"><img src="./assets/images/git.png" alt=""></a></div>
+                <div class="addr-velog"><a href="https://velog.io/@gong496777" target='_blank' class="velog"><img src="./assets/images/velog.png" alt=""></a></div>
+                <div class="addr-git"><a href="https://github.com/euni0224/" target='_blank' class="github"><img src="./assets/images/git.png" alt=""></a></div>
                 <div class="addr-tel"><a href="tel:+"><img src="./assets/images/phone.png" alt=""></a></div>
             </address>
         </div>
