--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                 <div class="project-area">
                                         <div class="card-front">
                                             <div class="img-wrap">
-                                                <img src="./assets/images/camrea.jpg" alt="네이버프로젝트">
+                                                <img src="./assets/images/camera1.jpg" alt="네이버프로젝트">
                                             </div>
                                             <div class="text-wrap">
                                                 <span class="pro-title">camera</span>
