--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <li class="technique-item">SCSS</li>
                             <li class="technique-item">JavaScript</li>
                             <li class="technique-item">jQuery</li>
-                            <li class="technique-item">시멘트</li>
+                            <li class="technique-item">시멘틱</li>
                             <li class="technique-item">마크업</li>
                             <li class="technique-item">GSAP</li>
                             <li class="technique-item">Scrolltrigger</li>
@@ -53,7 +53,7 @@
                             <li class="technique-item">SCSS</li>
                             <li class="technique-item">JavaScript</li>
                             <li class="technique-item">jQuery</li>
-                            <li class="technique-item">시멘트</li>
+                            <li class="technique-item">시멘틱</li>
                             <li class="technique-item">마크업</li>
                             <li class="technique-item">GSAP</li>
                             <li class="technique-item">Scrolltrigger</li>
@@ -63,7 +63,7 @@
                             <li class="technique-item">SCSS</li>
                             <li class="technique-item">JavaScript</li>
                             <li class="technique-item">jQuery</li>
-                            <li class="technique-item">시멘트</li>
+                            <li class="technique-item">시멘틱</li>
                             <li class="technique-item">마크업</li>
                             <li class="technique-item">GSAP</li>
                             <li class="technique-item">Scrolltrigger</li>
@@ -107,7 +107,7 @@
 
                                             <p>PC 적응형</p>
                                             <div class="hashtag">
-                                                <span>#시멘트</span>
+                                                <span>#시멘틱</span>
                                                 <span>#마크업</span>
                                             </div>
                                         </div>
@@ -140,7 +140,7 @@
 
                                             <p>MOBILE 적응형</p>
                                             <div class="hashtag">
-                                                <span>#시멘트</span>
+                                                <span>#시멘틱</span>
                                                 <span>#마크업</span>
                                                 <span>#css</span>
                                                 <span>#클론코딩</span>
@@ -174,7 +174,7 @@
                                                 <span class="pro-title">서울시청</span>
                                                 <p>PC 적응형</p>
                                                 <div class="hashtag">
-                                                    <span>#시멘트</span>
+                                                    <span>#시멘틱</span>
                                                     <span>#마크업</span>
                                                     <span>#JavaScript</span>
                                                 </div>
@@ -206,7 +206,7 @@
                                             <span class="pro-title">안다르</span>
                                             <p>MOBILE 적응형</p>
                                             <div class="hashtag">
-                                                <span>#시멘트</span>
+                                                <span>#시멘틱</span>
                                                 <span>#마크업</span>
                                                 <span>#JavaScript</span>
                                             </div>
@@ -239,7 +239,7 @@
                                             <span class="pro-title">NAVER Careers</span>
                                             <p>반응형</p>
                                             <div class="hashtag">
-                                                <span>#시멘트</span>
+                                                <span>#시멘틱</span>
                                                 <span>#마크업</span>
                                                 <span>#애니메이션</span>
                                                 <span>#jQuery</span>
