--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                     <button data-filter="mobile">MOBILE</button>
                     <button data-filter="gsap">GSAP</button>
                     <button data-filter="reaction">반응형</button>
+                    <button data-filter="scss">scss</button>
                 </div>
             </div>
             <div class="group-project">
@@ -132,7 +133,7 @@
                                 <div class="project-area">
                                     <div class="card-front">
                                         <div class="img-wrap">
-                                            <img src="./assets/images/gglag1.jpg" alt="네이버프로젝트">
+                                            <img src="./assets/images/gglag1.jpg" alt="지지랩프로젝트">
                                         </div>
                                         <div class="text-wrap">
                                             <span class="pro-title">G.G LAG</span>
@@ -167,7 +168,7 @@
                                 <div class="project-area">
                                         <div class="card-front">
                                             <div class="img-wrap">
-                                                <img src="./assets/images/seoul1.jpg" alt="네이버프로젝트">
+                                                <img src="./assets/images/seoul1.jpg" alt="서울시청프로젝트">
                                             </div>
                                             <div class="text-wrap">
                                                 <span class="pro-title">서울시청</span>
@@ -199,7 +200,7 @@
                                 <div class="project-area">
                                     <div class="card-front">
                                         <div class="img-wrap">
-                                            <img src="./assets/images/andar1.jpg" alt="네이버프로젝트">
+                                            <img src="./assets/images/andar1.jpg" alt="안다르프로젝트">
                                         </div>
                                         <div class="text-wrap">
                                             <span class="pro-title">안다르</span>
@@ -266,7 +267,7 @@
                                 <div class="project-area">
                                     <div class="card-front">
                                         <div class="img-wrap">
-                                            <img src="./assets/images/nike1.jpg" alt="네이버프로젝트">
+                                            <img src="./assets/images/nike1.jpg" alt="나이키프로젝트">
                                         </div>
                                         <div class="text-wrap">
                                             <span class="pro-title">나이키</span>
@@ -298,7 +299,7 @@
                                 <div class="project-area">
                                     <div class="card-front">
                                         <div class="img-wrap">
-                                            <img src="./assets/images/millie1.jpg" alt="네이버프로젝트">
+                                            <img src="./assets/images/millie1.jpg" alt="밀리서재프로젝트">
                                         </div>
                                         <div class="text-wrap">
                                             <span class="pro-title">밀리의 서재</span>
@@ -329,7 +330,7 @@
                                 <div class="project-area">
                                     <div class="card-front">
                                         <div class="img-wrap">
-                                            <img src="./assets/images/rhe1.jpg" alt="네이버프로젝트">
+                                            <img src="./assets/images/rhe1.jpg" alt="rhe프로젝트">
                                         </div>
                                         <div class="text-wrap">
                                             <span class="pro-title">RHE</span>
@@ -361,7 +362,7 @@
                                 <div class="project-area">
                                     <div class="card-front">
                                         <div class="img-wrap">
-                                            <img src="./assets/images/pill1.png" alt="네이버프로젝트">
+                                            <img src="./assets/images/pill1.png" alt="알약프로젝트">
                                         </div>
                                         <div class="text-wrap">
                                             <span class="pro-title">PILL</span>
@@ -380,6 +381,40 @@
                                             </div>
                                         </a>
                                         <a href="https://velog.io/@gong496777/PIll" target='_blank'>
+                                            <div class="site-direct">
+                                                <span>Go Velog</span>
+                                                <span>Go Velog</span>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="slide-item" data-filter="pc, gsap, mobile, reaction, scss">
+                                <div class="project-area">
+                                    <div class="card-front">
+                                        <div class="img-wrap">
+                                            <img src="./assets/images/swim.jpg" alt="수영프로젝트">
+                                        </div>
+                                        <div class="text-wrap">
+                                            <span class="pro-title">SWIM</span>
+                                            <p>반응형</p>
+                                            <div class="hashtag">
+                                                <span>#GSAP</span>
+                                                <span>#jQuery</span>
+                                                <span>#Scrolltrigger</span>
+                                                <span>#애니메이션</span>
+                                                <span>#SCSS</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-back">
+                                        <a href="https://euni0224.github.io/swim/" target='_blank'>
+                                            <div class="site-direct">
+                                                <span>Go Site</span>
+                                                <span>Go Site</span>
+                                            </div>
+                                        </a>
+                                        <a href="https://velog.io/@gong496777/swim" target='_blank'>
                                             <div class="site-direct">
                                                 <span>Go Velog</span>
                                                 <span>Go Velog</span>
