--- a/index.html
+++ b/index.html
@@ -423,6 +423,73 @@
                                     </div>
                                 </div>
                             </li>
+                            <li class="slide-item" data-filter="pc, gsap, mobile, reaction, scss">
+                                <div class="project-area">
+                                    <div class="card-front">
+                                        <div class="img-wrap">
+                                            <img src="./assets/images/swim.jpg" alt="수영프로젝트">
+                                        </div>
+                                        <div class="text-wrap">
+                                            <span class="pro-title">SWIM</span>
+                                            <p>반응형</p>
+                                            <div class="hashtag">
+                                                <span>#GSAP</span>
+                                                <span>#jQuery</span>
+                                                <span>#Scrolltrigger</span>
+                                                <span>#애니메이션</span>
+                                                <span>#SCSS</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-back">
+                                        <a href="https://euni0224.github.io/swim/" target='_blank'>
+                                            <div class="site-direct">
+                                                <span>Go Site</span>
+                                                <span>Go Site</span>
+                                            </div>
+                                        </a>
+                                        <a href="https://velog.io/@gong496777/swim" target='_blank'>
+                                            <div class="site-direct">
+                                                <span>Go Velog</span>
+                                                <span>Go Velog</span>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="slide-item" data-filter="pc, gsap, mobile">
+                                <div class="project-area">
+                                    <div class="card-front">
+                                        <div class="img-wrap">
+                                            <img src="./assets/images/andong.jpg" alt="안동컨벤션뷰로">
+                                        </div>
+                                        <div class="text-wrap">
+                                            <span class="pro-title">안동컨벤션뷰로</span>
+                                            <p>반응형</p>
+                                            <div class="hashtag">
+                                                <span>#GSAP</span>
+                                                <span>#jQuery</span>
+                                                <span>#Scrolltrigger</span>
+                                                <span>#애니메이션</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-back">
+                                        <a href="http://andongmice.or.kr/" target='_blank'>
+                                            <div class="site-direct">
+                                                <span>Go Site</span>
+                                                <span>Go Site</span>
+                                            </div>
+                                        </a>
+                                        <!-- <a href="https://velog.io/@gong496777/swim" target='_blank'>
+                                            <div class="site-direct">
+                                                <span>Go Velog</span>
+                                                <span>Go Velog</span>
+                                            </div>
+                                        </a> -->
+                                    </div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
