--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="slide-item" data-filter="pc, gsap, mobile">
+                            <li class="slide-item" data-filter="pc, gsap, reaction, mobile">
                                 <div class="project-area">
                                     <div class="card-front">
                                         <div class="img-wrap">
